--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,7 +17,8 @@ code {
   font-family: 'source-code-pro', Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-#carousel1{
-    max-height: 400px;
-   
+
+#carousel1 {
+  max-height: 400px;
+
 }
